# protocols

./: .gitignore  Cargo.toml  README.md  README.tpl  build.rs
builder/: Cargo.toml
builder/src/: default_lib.txt  lib.rs
example/: Cargo.toml  build.rs
example/schema/: test.proto
example/src/: lib.rs
examples/: receiver.rs  sender.rs
libraries/person/: build.rs  cargo.toml
libraries/person/protos/: person.proto
libraries/person/src/: lib.rs  person.rs
libraries/root-message/: Cargo.toml  build.rs  hash.txt  schema_url.txt
libraries/root-message/schema/: rootmessage.proto
libraries/root-message/src/: lib.rs  rootmessage.rs
libraries/rootmessage/: Cargo.toml  build.rs  hash.txt
libraries/rootmessage/src/: lib.rs  rootmessage.rs
libraries/test-protocol/: Cargo.toml  build.rs  hash.txt
libraries/test-protocol/.cargo/: config
libraries/test-protocol/schema/: root.proto  test.proto
libraries/test-protocol/schema_urls/: root.txt  test.txt
libraries/test-protocol/src/: lib.rs  main.rs  root.rs  root_interface.rs  test.rs  test_interface.rs
libraries/test-protocol/src/test_autogen/: test.rs
libraries/test-protocol/src/test_interface/: test.rs
protobuf/: rootmessage.proto
schema/: transmission.proto  transport.proto
schema_urls/: transport.txt
src/: build.rs  buildfunctions.rs  common.rs  commonlibrary.rs  core.rs  hashenabler.rs  lib.rs  logging.rs  pluginhandler.rs  pluginmanager.rs  propagator.rs  rpcmacro.rs  transport.rs  transport_glue.rs  transporter.rs  transportresponse.rs  utils.rs  wasmhandler.rs
src/transmission_interface/: mod.rs  temp_transmission_rpc.rs  transmission.rs  transmission_grpc.rs
src/transport_autogen/: mod.rs  transport.rs  transport_glue.rs
