[package]
name = "protocols"
version = "0.0.5"
authors = ["James Prince <34577138+zutils@users.noreply.github.com>"]
repository = "https://github.com/zutils/protocols"
keywords = ["protocol"]
categories = ["parser-implementations", "rust-patterns", "template-engine", "web-programming"]
description = "The protocols crate is native rust library that provides an application layer system designed to make it easy to send messages between systems"
readme = "./README.md"
license = "MIT/Apache-2.0"
build = "./src/build.rs"
edition = "2018"

[dependencies]
failure = "0.1.5"
signals = "0.0.5"
libloading = "0.5"
notify = "4.0.6"
glob = "0.2"
protobuf = "2.2.4"
protobuf-codegen = "2.2.4"
protobuf-codegen-pure = "2.2.4"
protoc-rust-grpc = "0.6.1"
ipfs-api = "0.5.0-alpha2"
hyper = "0.12.20"
rand = "0.6.4"
log = "0.4.6"
lazy_static = "1.2.0"
reqwest = "0.9.8"
fern = { version = "0.5.7", features = ["colored"] }

[build-dependencies]
failure = "0.1.5"
protoc-rust-grpc = "0.6.1"
protobuf-codegen-pure = "2.2.4"
protobuf = "2.2.4"
hyper = "0.12.21"
ipfs-api = "0.5.0-alpha2"
log = "0.4.6"
reqwest = "0.9.8"
lazy_static = "1.2.0"
fern = { version = "0.5.7", features = ["colored"] }

[badges]
travis-ci = { repository = "zutils/protocols" }
