[package]
name = "protocols"
version = "0.0.5"
authors = ["James Prince <34577138+zutils@users.noreply.github.com>"]
repository = "https://github.com/zutils/protocols"
keywords = ["protocol"]
categories = ["parser-implementations", "rust-patterns", "template-engine", "web-programming"]
description = "The protocols crate is native rust library that provides an application layer system designed to make it easy to send messages between systems"
readme = "./README.md"
license = "MIT/Apache-2.0"
build = "./src/build.rs"
edition = "2018"

[dependencies]
failure = "0.1.5"
signals = "0.0.5"
libloading = "0.5"
notify = "4.0.7"
glob = "0.2"
pb-rs = { path = "../quick-protobuf/pb-rs", features = ["generateImplFromForEnums"] }
quick-protobuf = { path = "../quick-protobuf/quick-protobuf" }
ipfs-api = "0.5.0-alpha2"
hyper = "0.12.23"
log = "0.4.6"
lazy_static = "1.2.0"
reqwest = "0.9.9"
fern = { version = "0.5.7", features = ["colored"] }
derive-new = "0.5.6"

[build-dependencies]
failure = "0.1.5"
pb-rs = { path = "../quick-protobuf/pb-rs", features = ["generateImplFromForEnums"]  }
quick-protobuf = { path = "../quick-protobuf/quick-protobuf" }
hyper = "0.12.21"
ipfs-api = "0.5.0-alpha2"
log = "0.4.6"
reqwest = "0.9.9"
lazy_static = "1.2.0"
derive-new = "0.5.6"
fern = { version = "0.5.7", features = ["colored"] }

[dev-dependencies]
test-protocol = { path = "./libraries/test-protocol" } # This is so that the dll gets created.

[badges]
travis-ci = { repository = "zutils/protocols" }
