[package]
name = "builder"
version = "0.1.0"
authors = ["James Prince <34577138+zutils@users.noreply.github.com>"]

[dependencies]
protobuf = "*"
failure = "0.1.2"
protobuf-codegen-pure = "2.1.1"
protobuf-codegen = "2.1.1"
ipfs-api = "0.5.0-alpha2"
hyper = "0.12.11"

[features]
with-serde = ["protobuf/with-serde"]
default = ["with-serde"]
