[package]
name = "example"
version = "0.1.0"
authors = ["James Prince <34577138+zutils@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = "*"
failure = "*"
protobuf = "*"
protocols = { path = "../" }
rand = "*"
base64 = "*"
test-protocol = { path = "../libraries/test-protocol" }

[build-dependencies]
log = "*"
failure = "*"
protobuf = "*"
protocols = { path = "../" }

[lib]
name = "selflib"
path = "src/lib.rs"
