[package]
name = "example"
version = "0.1.0"
authors = ["James Prince <34577138+zutils@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = "*"
failure = "*"
quick-protobuf = { path = "../../quick-protobuf/quick-protobuf" }
protocols = { path = "../" }
rand = "*"
test-protocol = { path = "../libraries/test-protocol" }
derive-new = "*"

[build-dependencies]
log = "*"
failure = "*"
quick-protobuf = { path = "../../quick-protobuf/quick-protobuf" }
protocols = { path = "../" }
test-protocol = { path = "../libraries/test-protocol" }

[lib]
name = "selflib"
path = "src/lib.rs"
