[package]
name = "root-message"
version = "0.1.0"
authors = ["James Prince <34577138+zutils@users.noreply.github.com>"]

[dependencies]
protobuf = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
failure = "*"

[build-dependencies]
protobuf = "*"
failure = "*"
protobuf-codegen-pure = "*"
protobuf-codegen = "*"
ipfs-api = "0.5.0-alpha2"
hyper = "*"

[features]
with-serde = ["protobuf/with-serde"]
default = ["with-serde"]

[lib]
crate-type = ["dylib"]
