[package]
name = "root-message"
version = "0.1.0"
authors = ["James Prince <34577138+zutils@users.noreply.github.com>"]

[dependencies]
protobuf = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
failure = "*"
protocols = { path = "../../" }

[build-dependencies]
protocols = { path = "../../" }
failure = "0.1.2"

[features]
with-serde = ["protobuf/with-serde"]
default = ["with-serde"]

[lib]
crate-type = ["dylib"]
