[package]
name = "rootmessage"
version = "0.1.0"
build = "build.rs"

[dependencies]
protobuf = "2.1.1"
serde = "1.0.79"
serde_json = "1.0.32"
serde_derive = "1.0.79"
failure = "0.1.2"

[build-dependencies]
protobuf-codegen-pure = "2.1.1"
protobuf-codegen = "2.1.1"
ipfs-api = "0.5.0-alpha2"
failure = "0.1.2"
#futures = "*"
hyper = "0.12.11"

[lib]
crate-type = ["dylib"]

[features]
with-serde = ["protobuf/with-serde"]
default = ["with-serde"]
