[package]
name = "test-protocol"
version = "0.1.0"
authors = ["James Prince <34577138+zutils@users.noreply.github.com>"]
edition = "2018"

[dependencies]
protobuf = "*"
failure = "*"
lazy_static = "*"
protocols = { path = "../../../protocols/" }
quick-protobuf = { path = "../../../quick-protobuf/quick-protobuf" }
derive-new = "*"
log = "*"

[build-dependencies]
failure = "*"
protocols = { path = "../../../protocols" }
log = "*"

[lib]
crate-type = ["cdylib"]
